# school

./: .dockerignore  .env  .env.backup  .env.example  .env.local  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  OVERVIEW.md  ReadME.md  SIDEBAR_FEATURES_BY_ROLE.md  create_test_users.py  docker-compose.yml  middleware.ts  next.config.js  package-lock.json  package.json  start-django.bat  tailwind.config.js  tsconfig.json
.next/: trace
.next/cache/: .tsbuildinfo  config.json
.next/server/: edge-runtime-webpack.js  middleware.js  (+3 more)
app/: globals.css  layout.tsx  page.tsx
backend/: .env.example  .gitignore  Dockerfile  README.md  create_sample_students.py  entrypoint.sh  env.example  local_dev_settings.py  manage.py  pyproject.toml  requirements.txt  temp_env  update_env.py
backend/accounts/: admin.py  apps.py  health_views.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/core/: __init__.py  settings.py  urls.py  urls_clean.py  urls_simple.py  views.py  views_new.py
backend/core/management/commands/: wait_for_db.py
backend/db/: init.sql
backend/static/css/: style.css
backend/students/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/students/migrations/: 0001_initial.py
components/: auth-provider.tsx
hooks/: useTheme.ts  useToast.ts
lib/: apiUtils.ts  auth-utils.ts  auth.ts  authApi.ts  errorHandler.ts  prisma.ts  studentsCache.ts  utils.ts
prisma/: schema.prisma
scripts/: Untitled-1.txt  docker-dev.ps1  docker-dev.sh  init.ps1  init.sh
(+123 files in other folders)
