[tool.poetry]
name = "school-management-backend"
version = "0.1.0"
description = "Backend for School Management System"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "core"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.7"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.1"
django-environ = "^0.11.2"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.1.0"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.7"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint]
[MESSAGES CONTROL]
disable = "C0114,C0115,C0116,R0903,R0913,R0914,R0901,R0801"

[format]
max-line-length = 88
